# dicord_bots

projectPitch/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
projectPitch/source/: check_proposal_ages.py  projectPitch.py  update_points.py  update_proposal_status.py
